modified game instance

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/Level/StartingMenu_001.StartingMenu_001
 GameDefaultMap=/Game/Level/StartingMenu_001.StartingMenu_001
 GlobalDefaultGameMode=/Game/PongGameMode.PongGameMode_C
+GameInstanceClass=/Game/GameInfoInstance.GameInfoInstance_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
