--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -34,11 +34,11 @@ bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
-bCaptureMouseOnLaunch=False
-DefaultViewportMouseCaptureMode=CapturePermanently
+bCaptureMouseOnLaunch=True
+DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
-DefaultViewportMouseLockMode=LockOnCapture
-+ActionMappings=(ActionName="RespawnBall",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+DefaultViewportMouseLockMode=LockAlways
++ActionMappings=(ActionName="RespawnBall",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveUp",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveUp",Key=S,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
@@ -48,4 +48,5 @@ ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 +ConsoleKeys=Backslash
+
 
