Added Pause menu load screen

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -35,12 +35,16 @@ bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
 bCaptureMouseOnLaunch=True
-DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
+DefaultViewportMouseCaptureMode=CapturePermanently
 bDefaultViewportMouseLock=False
-DefaultViewportMouseLockMode=LockAlways
+DefaultViewportMouseLockMode=DoNotLock
 +ActionMappings=(ActionName="RespawnBall",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+AxisMappings=(AxisName="MoveUp",Key=W,Scale=1.000000)
-+AxisMappings=(AxisName="MoveUp",Key=S,Scale=-1.000000)
++ActionMappings=(ActionName="OpenMenu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="OpenMenu",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++AxisMappings=(AxisName="Player1MoveUp",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="Player1MoveUp",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="player2MoveUp",Key=Up,Scale=1.000000)
++AxisMappings=(AxisName="player2MoveUp",Key=Down,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
@@ -48,5 +52,4 @@ ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 +ConsoleKeys=Backslash
-
 
