--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,6 +11,7 @@ EditorStartupMap=/Game/Level/StartingMenu_001.StartingMenu_001
 GameDefaultMap=/Game/Level/StartingMenu_001.StartingMenu_001
 GlobalDefaultGameMode=/Game/PongGameMode.PongGameMode_C
 GameInstanceClass=/Game/GameInfoInstance.GameInfoInstance_C
+bUseSplitscreen=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
