--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -38,13 +38,15 @@ bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=DoNotLock
-+ActionMappings=(ActionName="RespawnBall",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="RespawnBallP1",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="OpenMenu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="OpenMenu",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="UseSuper",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="RespawnBallP2",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Player1MoveUp",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="Player1MoveUp",Key=S,Scale=-1.000000)
-+AxisMappings=(AxisName="player2MoveUp",Key=Up,Scale=1.000000)
-+AxisMappings=(AxisName="player2MoveUp",Key=Down,Scale=-1.000000)
++AxisMappings=(AxisName="player2MoveUp",Key=Gamepad_DPad_Up,Scale=1.000000)
++AxisMappings=(AxisName="player2MoveUp",Key=Gamepad_DPad_Down,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
@@ -52,4 +54,5 @@ ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 +ConsoleKeys=Backslash
+
 
